welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:3: error: '=' expected but ';' found.
  var l=num(0)
^